src-ken&y/objects/Item_Specification__c.object
<CustomObject>
    <customHelpPage>HelpItemSpecifications</customHelpPage>
    <description>Item Specifications and Component Header</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>By_Product_Components__c</fullName>
        <description>Number of by product components in the item specification for use in the subcontracting flow</description>
        <label>By-Product Components</label>
        <summaryFilterItems>
            <field>Component__c.Type__c</field>
            <operation>equals</operation>
            <value>By-product</value>
        </summaryFilterItems>
        <summaryForeignKey>Component__c.Assembly_Item_Specification__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Unique identifier to specify this company for data integrations</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company that this Item Specification belongs to</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Item Specfications</relationshipLabel>
        <relationshipName>Item_Specfications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Phantom_Routings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Phantom Routings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines this Item Specification as a Costing type specification</description>
        <inlineHelpText>A checkmark indicates that the specification is included in the costing rollup process. Costing specifications (BOMs) are included in the assembly cost rollup process, but are ignored by MRP.</inlineHelpText>
        <label>Costing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Work_Order_Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Work Order Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Item Specifications (Default Work Order Packaging UOM)</relationshipLabel>
        <relationshipName>Item_Specifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Identifier__c</fullName>
        <description>Used to join this item spec to a facility at data load time</description>
        <label>Facility Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The facility for which the item specification applies.</description>
        <inlineHelpText>BOMs can be maintained at the company or facility level. If specified, this BOM is used by the specified facility.</inlineHelpText>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Facility Company must match Item Specification Company</errorMessage>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Item Specifications</relationshipLabel>
        <relationshipName>Item_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <description>used to relate item specs to the Item they belong under</description>
        <label>Item Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Revision__c</fullName>
        <description>Hidden field for uniqueness of Item+FacilityId+Revision+Production+Costing</description>
        <externalId>true</externalId>
        <label>Item+Revision</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item</description>
        <inlineHelpText>Displays the list of available items.</inlineHelpText>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Item__c.Non_Inventory__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Specifications</relationshipLabel>
        <relationshipName>Item_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model number</description>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes about this item specification</description>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specification UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Item Specifications</relationshipLabel>
        <relationshipName>Item_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Spec_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected - Component options will not impact sales price</inlineHelpText>
        <label>Price Spec Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Key_Id__c</fullName>
        <description>Primary upsert key for loading data into this table</description>
        <externalId>true</externalId>
        <label>Primary Key Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines this Item Specification as a Production type specification</description>
        <inlineHelpText>A check mark indicates that this BOM is used in production. Production BOMs are included in the MRP planning process and in work orders.</inlineHelpText>
        <label>Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>Item Revision</description>
        <inlineHelpText>The revision code for the selected item.</inlineHelpText>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date2__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Item Specification Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Costing_Start_Date__c</fullName>
        <label>Unique Costing Start Date</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Production_Start_Date__c</fullName>
        <label>Unique Production Start Date</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Item Specification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Facility__c</columns>
        <columns>Type__c</columns>
        <columns>Revision__c</columns>
        <columns>Start_Date2__c</columns>
        <columns>Model__c</columns>
        <columns>Costing__c</columns>
        <columns>Production__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Specification</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>after creating a Item Specification for a given company, do not allow the Item Specification to change to another company</description>
        <errorConditionFormula>ISCHANGED(Company__c)</errorConditionFormula>
        <errorMessage>Once created for a Company, the Item Specification must not change Company field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_fields</fullName>
        <active>true</active>
        <description>Required fields</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Type__c, &quot;Template&quot;)), OR(ISBLANK(Item__c), ISNULL(Item__c), ISBLANK(Company__c), ISNULL(Company__c), ISBLANK(Start_Date2__c), ISNULL(Start_Date2__c)))</errorConditionFormula>
        <errorMessage>Item, company and start date are required for non-template item specifications</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revision_required_for_item_specification</fullName>
        <active>true</active>
        <description>Revision is  required for  item specifications.</description>
        <errorConditionFormula>OR(ISBLANK( Revision__c ),ISNULL(Revision__c))</errorConditionFormula>
        <errorMessage>Revision is  required for  item specifications.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Uncheck_Costing_and_Production</fullName>
        <active>true</active>
        <description>Uncheck Costing and Production</description>
        <errorConditionFormula>AND(OR(Configurable__c,ISPICKVAL(Type__c,&quot;Template&quot;)),OR(Costing__c,Production__c))</errorConditionFormula>
        <errorMessage>Configurable or template item specifications cannot have production or costing checked</errorMessage>
    </validationRules>
</CustomObject>